--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,9 @@ services:
     env: static
     buildCommand: npm run build
     staticPublishPath: dist
+    envVars:
+      - key: GEMINI_API_KEY
+        value: YOUR_ACTUAL_GEMINI_API_KEY_HERE
     routes:
       - type: redirect
         source: /*
