--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.28.0",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.4.0",
     "axios": "^1.13.2",
     "esbuild": "^0.25.12",
     "react": "^18.2.0",
