--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "patch-package": "^8.0.0",
     "typescript": "~5.8.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-image-optimizer": "^2.0.3"
   }
 }
